--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="connect">Connect</string>
     <string name="Login">login</string>
     <string name="Name">name</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Rejestracja" />
+    <string name="zarejestruj">Zarejestruj</string>
+    <string name="go_back">go back</string>
 </resources>
