--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="Rejestracja" />
     <string name="zarejestruj">Zarejestruj</string>
     <string name="go_back">go back</string>
+    <string name="weso_a_pizzeria">Wesoła Pizzeria</string>
 </resources>
