Wprowadzenie logowania i rejestracji

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="zarejestruj">Zarejestruj</string>
     <string name="go_back">go back</string>
     <string name="weso_a_pizzeria">Wesoła Pizzeria</string>
+    <string name="Kelner">Kelner</string>
 </resources>
